--- a/hotel-service/src/main/resources/application.yml
+++ b/hotel-service/src/main/resources/application.yml
@@ -1,2 +1,15 @@
 server:
   port: 8082
+
+spring:
+  datasource:
+    url: jdbc:postgresql://localhost:5433/microservices
+    username: postgres
+    password: root
+
+  jpa:
+    hibernate:
+      ddl-auto: update
+    show-sql: true
+
+
