--- a/UserService/src/main/resources/application.yml
+++ b/UserService/src/main/resources/application.yml
@@ -2,8 +2,10 @@ server:
   port: 8081
 
 spring:
+  application:
+    name: user-service
   datasource:
-    url: jdbc:mysql://localhost:3308/microservices
+    url: jdbc:mysql://localhost:3306/microservices
     username: root
     password: pass
     driver-class-name: com.mysql.cj.jdbc.Driver
@@ -11,3 +13,10 @@ spring:
     hibernate:
       ddl-auto: update
     show-sql: true
+
+eureka:
+  instance:
+    prefer-ip-address: true
+  client:
+    serviceUrl:
+      defaultZone: http://localhost:8761/eureka/
