--- a/rating-service/src/main/resources/application.yml
+++ b/rating-service/src/main/resources/application.yml
@@ -6,3 +6,10 @@ spring:
     mongodb:
       uri: mongodb://localhost:27017
       database: microservices
+  application:
+    name: rating-service
+
+eureka:
+  client:
+    serviceUrl:
+      defaultZone: http://localhost:8761/eureka
